Added list of activities at my favorite spot

--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
     </head>
     <body>
         <h1> Jammula Sri Laxmi Sathwika </h1> 
+        <h2><strong>My Favorite Vacation Spot:</strong>Bali, Indonesia</h2>
+        <p> <strong>What I adore most</strong> about Bali is its unique blend of rich culture and natural wonders. Whether I'm exploring the ancient temples in the jungle or spending on the sandy shores of Nusa Dua, Bali offers a perfect harmony adventure. The vibrant local art, dance performances, and <strong> mouthwatering Indonesian cuisine </strong> add an extra charm to the island.</p>
+        <hr>
+        <h2>Activities at My Favorite Vacation Spot. </h2>
+        <ol>
+            <li>Relax on the Beach: My absolute favorite activity at Bali is lounging on the pristine sandy beaches. .</li>
+            <li>Snorkeling and Diving: Exploring the underwater world, and it will be an incredible experience to swim among them.</li>
+            <li>Hiking in the Mountains: When I'm in the mood for some adventure, I love hiking in the nearby mountains.</li>
+        </ol>
     </body>
 </html>
+ 
