Added list of dishes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
     <head>
@@ -15,9 +14,11 @@
             <li>Snorkeling and Diving: Exploring the underwater world, and it will be an incredible experience to swim among them.</li>
             <li>Hiking in the Mountains: When I'm in the mood for some adventure, I love hiking in the nearby mountains.</li>
         </ol>
+        <h3>Popular Balinese Dishes</h3>
+    <ul>
+        <li>Fried Rice (Nasi Goreng)</li>
+        <li>Fried Noodles (Mie Goreng)</li>
+        <li>Minced Seafood Satay (Sate Lilit)</li>
+        <li>Spiced Chicken (Ayam Betutu)</li>
     </body>
 </html>
- 
-=======
-
->>>>>>> ac69e76d0f1e739a4c40850ff67a73b23248b22b
