Added mystats, my fav food item with image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li>Snorkeling and Diving: Exploring the underwater world, and it will be an incredible experience to swim among them.</li>
             <li>Hiking in the Mountains: When I'm in the mood for some adventure, I love hiking in the nearby mountains.</li>
         </ol>
-        <h3>Popular Balinese Dishes</h3>
+        <h3>List of Dishes</h3>
     <ul>
         <li>Fried Rice (Nasi Goreng)</li>
         <li>Fried Noodles (Mie Goreng)</li>
@@ -22,3 +22,4 @@
         <li>Spiced Chicken (Ayam Betutu)</li>
     </body>
 </html>
+[mystats](mystats.html).
