Added link to mystats

--- a/index.html
+++ b/index.html
@@ -22,4 +22,4 @@
         <li>Spiced Chicken (Ayam Betutu)</li>
     </body>
 </html>
-[mystats](mystats.html).
+<a href="mystats.html">mystats page</a>
