--- a/index.html
+++ b/index.html
@@ -20,7 +20,36 @@
         <li>Fried Noodles (Mie Goreng)</li>
         <li>Minced Seafood Satay (Sate Lilit)</li>
         <li>Spiced Chicken (Ayam Betutu)</li>
-    </ul>
-      <a href="mystats.html">mystats page</a> 
+    </ul> 
+        <a href="mystats.html">mystats page</a>
+        <hr>
+        <table>
+            <tr>
+                <th>Sport Name</th>
+                <th>Recommendation Reason</th>
+                <th>Average Weekly Hours</th>
+            </tr>
+            <tr>
+                <td>Tennis</td>
+                <td>I recommend tennis because it's a great way to stay active and improve agility and coordination.</td>
+                <td>5 hours</td>
+            </tr>
+            <tr>
+                <td>Hiking</td>
+                <td>Hiking allows you to connect with nature, relieve stress, and get some fresh air.</td>
+                <td>7 hours</td>
+            </tr>
+            <tr>
+                <td>Swimming</td>
+                <td>Swimming is an excellent full-body workout that's easy on the joints.</td>
+                <td>4 hours</td>
+            </tr>
+            <tr>
+                <td>Cycling</td>
+                <td>Cycling is an eco-friendly way to explore your surroundings and improve cardiovascular health.</td>
+                <td>6 hours</td>
+            </tr>
+        </table>
+         
     </body>
 </html>
