--- a/mystats.html
+++ b/mystats.html
@@ -7,7 +7,7 @@
     <h1>About Me</h1>
     <p>Hello, I'm Jammula Sri Laxmi Sathwika, I'm a passionate software developer with a deep love for AI and machine learning. In my free time, I enjoy hiking, playing musical instruments, and exploring new coding challenges. Here's an interesting fact about myself </p>
     <h2>My Favorite Food</h2>
-    <p>One of my favorite foods is Idly Sambar, I love this food because it is delicious and healthy and my Mom makes super soft idly for me.</p>
+    <p>One of my favorite foods is Idly Sambar, I love this food because it is delicious and healthy and my Mom makes super soft idly for me, she is the best cook</p>
     <img src="food_image.jpg" alt="Link to Image food_image.jpg">
 </body>
 </html>
