Added sports table

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </ul> 
         <a href="mystats.html">mystats page</a>
         <hr>
-        <table>
+        <h2>Creating a sports table</h2>
+        <p>This table contains information about sports that are recomended for someone inorder to improve the physical health and it also provides reasons to play those sports</p>
+        <table border="3">
+            <tbody>
             <tr>
                 <th>Sport Name</th>
                 <th>Recommendation Reason</th>
@@ -49,6 +52,7 @@
                 <td>Cycling is an eco-friendly way to explore your surroundings and improve cardiovascular health.</td>
                 <td>6 hours</td>
             </tr>
+            </tbody>
         </table>
          
     </body>
