--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li>Minced Seafood Satay (Sate Lilit)</li>
         <li>Spiced Chicken (Ayam Betutu)</li>
     </ul> 
-        <a href="mystats.html">mystats page</a>
+       for more information <a href="mystats.html">mystats page</a>
         <hr>
         <h2>Creating a sports table</h2>
         <p>This table contains information about sports that are recomended for someone inorder to improve the physical health and it also provides reasons to play those sports</p>
